crates/plotnik-tests/tests/02-parser/recovery_unexpected/predicate_bare_cascades_to_children.txt
(function #eq? @name "test")
------------------ DIAGNOSTICS -------------------
error: Tree-sitter predicates are not supported
 --> query.ptk:1:11
  |
1 | (function #eq? @name "test")
  |           ^^^^
  |
help: move `== "test"` into the node pattern captured as `@name`
